refactor: toggleable and clickable feature